# max2tg

./: .gitignore  GEMINI.md  README.md  __main__.py  config.py  pyproject.toml  requirements.txt  settings.py
bot/: __main__.py  bot_file.py  config.yaml  requirements.txt  run_bot.py  settings.py
bot/callbacks/: user.py
bot/callbacks/admin/: admin.py
bot/db/: database.py  db_dependency.py
bot/filters/: is_admin.py
bot/handlers/: group.py  max.py  user.py
bot/handlers/admin/: admin_handlers.py
bot/keyboards/: setup_ui.py  user_kb.py
bot/keyboards/admin/: admin_kb.py
bot/middlewares/: throttling.py
bot/models/: max_group.py  max_groups.py  media_model.py  message.py  schedule.py  temp_prikol.py  temp_schedule.py  user.py
bot/services/: mailing_manager.py  parser_worker.py  schedule.py
bot/utils/: date_utils.py  error_phrases.py  phrases.py  states.py
core/: message_handler.py  message_models.py  queue_manager.py
max/: client.py  clients_manager.py  config.py
max/db/: max_repo.py
max/models/: groups.py  max_account.py
max/templates/: payloads.py
max/utils/: date.py  process_opcodes.py  proxy_utils.py  user_keyboard.py
parser/: client.py  config.py
parser/models/: chat.py  max_account.py
parser/templates/: payloads.py
parser/utils/: date.py
shared/: .env.example  config.yaml
