[project]
name = "max-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.22.0",
    "aiosqlite>=0.22.1",
    "cachetools==6.2.1",
    "pydantic==2.11.4",
    "pydantic-settings[yaml]==2.12.0",
    "sqlalchemy==2.0.44",
    "websockets==15.0.1",
]
